kubernetes/manifest/base/webui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-webui-deployment
  namespace: ollama-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama-webui
  template:
    metadata:
      labels:
        app: ollama-webui
    spec:
      containers:
      - name: ollama-webui
        image: ghcr.io/ollama-webui/ollama-webui:main
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "500m"
            memory: "500Mi"
        tty: true
